resources_for_testing/tests/asm/error/wrong_fake_arg1.s
.name "wrong"
.comment "error"

l2:		sti r1, fake, %1		#fake argument
		and r1, %0, r1

live:	live %1
		zjmp %:live
